Revision history for {{$dist->name}}

{{$NEXT}}

0.002     2011-08-19 14:13:41 America/New_York
          fix boneheaded arrangement of documentation; synopsis now comes FIRST
          and is labeled "SYNOPSIS" instead of "ABSTRACT"

          give MJD an author credit

          thank Pobox.com for paying for me to write this

0.001     2011-08-19 11:29:33 America/New_York
          first release, split from internal Pobox projects