@@ -104,4 +104,22 @@ for my $test (@tests) {
   }
 }
 
+{
+  my $comp_2 = MooseX::ClassCompositor->new({
+    class_basename  => 'MXCC::Test',
+    class_metaroles => {
+      class => [ 'MooseX::StrictConstructor::Trait::Class' ],
+    },
+    fixed_roles => [ 't::lib::BasicFoo' ],
+    role_prefixes   => {
+      '' => 't::lib::',
+    },
+  });
+
+  my $class = $comp_2->class_for(qw(BasicBar));
+
+  ok($class->does('t::lib::BasicFoo'));
+  ok($class->does('t::lib::BasicBar'));
+}
+
 done_testing;
